--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "typescript-eslint": "^8.18.1"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.96",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "axios": "^1.7.9",
@@ -32,7 +33,7 @@
     "express-validator": "^7.2.0",
     "http-status-codes": "^2.3.0",
     "mongodb": "^6.12.0",
-    "mongoose": "^8.9.1",
+    "mongoose": "^8.10.0",
     "mongoose-sequence": "^6.0.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
