--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,12 @@
     "typescript-eslint": "^8.18.1"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/mongoose": "^5.11.96",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
