--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
