--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       context: ./backend
     ports:
       - "3000:3000"
+    env_file:
+      - .env
     networks:
       - app-network
 
